--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cordova-plugin-backup",
+  "name": "cordova-plugin-cloud-settings",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
