Implement autobackup for Android 6+ and continue to support manual backup for Android 5 and below.

--- a/plugin.xml
+++ b/plugin.xml
@@ -9,12 +9,14 @@
     <license>Apache 2.0</license>
     <keywords>cordova,backup,cloud,settings,icloud</keywords>
 
-    <js-module src="www/cloudsettings.js" name="CloudSettingsPlugin">
-        <clobbers target="cordova.plugin.cloudsettings" />
-    </js-module>
-
     <platform name="android">
         <preference name="BACKUP_SERVICE_KEY" />
+
+        <dependency id="cordova-plugin-file" version="*" />
+
+        <js-module src="www/android/cloudsettings.js" name="CloudSettingsPlugin">
+            <clobbers target="cordova.plugin.cloudsettings" />
+        </js-module>
 
        <config-file target="AndroidManifest.xml" parent="/manifest">
            <!-- Write-file Permission -->
@@ -26,15 +28,22 @@
         </config-file>
 
         <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
-            <application android:allowBackup="true" android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper" />
+            <application
+                    android:allowBackup="true"
+                    android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper"
+                    android:fullBackupOnly="true"
+                    android:fullBackupContent="@xml/backup_rules"
+            />
         </edit-config>
 
+        <resource-file src="src/android/backup_rules.xml" target="res/xml/backup_rules.xml" />
         <source-file src="src/android/CloudSettingsPlugin.java" target-dir="src/cordova/plugin/cloudsettings" />
         <source-file src="src/android/BackupAgentHelper.java" target-dir="src/cordova/plugin/cloudsettings" />
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="CloudSettingsPlugin" >
                 <param name="android-package" value="cordova.plugin.cloudsettings.CloudSettingsPlugin"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
     </platform>
