--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
   "name": "cordova-plugin-cloud-settings",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A Cordova plugin for Android & iOS to persist user settings in cloud storage across devices and installs.",
+  "author": "Dave Alden",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dpa99c/cordova-plugin-cloud-settings.git"
+  },
+  "cordova": {
+    "id": "cordova-plugin-cloud-settings",
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  },
+  "issue": "https://github.com/dpa99c/cordova-plugin-cloud-settings/issues",
+  "keywords": [
+    "ecosystem:cordova",
+    "cordova",
+    "cordova-android",
+    "cordova-ios",
+    "phonegap",
+    "backup",
+    "cloud",
+    "settings",
+    "icloud"
+  ],
   "dependencies": {
     "xml2js": "^0.4.9"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Daniel Jackson <daniel@cloakedninjas.co.uk> (http://cloakedninjas.co.uk)",
-  "license": "ISC"
+  "devDependencies": {}
 }
