--- a/plugin.xml
+++ b/plugin.xml
@@ -53,6 +53,15 @@
     </platform>
 
     <platform name="ios">
+
+         <config-file target="*-Release.plist" parent="com.apple.developer.ubiquity-kvstore-identifier">
+            <string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+        </config-file>
+
+        <config-file target="*-Debug.plist" parent="com.apple.developer.ubiquity-kvstore-identifier">
+            <string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+        </config-file>
+
         <config-file target="config.xml" parent="/*">
             <feature name="CloudSettingsPlugin">
                 <param name="ios-package" value="CloudSettingsPlugin"/>
@@ -66,7 +75,6 @@
         <header-file src="src/ios/CloudSettingsPlugin.h"/>
         <source-file src="src/ios/CloudSettingsPlugin.m"/>
 
-        <hook type="after_plugin_install" src="hooks/ios/install_entitlements.js"/>
-        <hook type="after_platform_add" src="hooks/ios/install_entitlements.js"/>
+        
     </platform>
 </plugin>
