--- a/plugin.xml
+++ b/plugin.xml
@@ -41,10 +41,7 @@
         <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
             <application
                     android:allowBackup="true"
-                    android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper"
-                    android:fullBackupOnly="true"
-                    android:fullBackupContent="@xml/backup_rules"
-            />
+                    android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper" />
         </edit-config>
 
         <resource-file src="src/android/backup_rules.xml" target="res/xml/backup_rules.xml" />
