--- a/plugin.xml
+++ b/plugin.xml
@@ -34,12 +34,14 @@
             <clobbers target="cordova.plugin.cloudsettings" />
         </js-module>
 
-        <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
-            <application
-                    android:allowBackup="true"
-                    android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper" >
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <meta-data android:name="com.google.android.backup.api_key" android:value="$ANDROID_BACKUP_SERVICE_KEY" />
-        </application>
+        </config-file>
+
+        <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
+            <application xmlns:tools="http://schemas.android.com/tools"
+                    android:allowBackup="true"
+                    android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper" tools:node="merge" />
         </edit-config>
 
         <resource-file src="src/android/backup_rules.xml" target="res/xml/backup_rules.xml" />
