--- a/plugin.xml
+++ b/plugin.xml
@@ -38,7 +38,7 @@
             <meta-data android:name="com.google.android.backup.api_key" android:value="$ANDROID_BACKUP_SERVICE_KEY" />
         </config-file>
 
-        <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
+        <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="overwrite">
             <application xmlns:tools="http://schemas.android.com/tools"
                     android:allowBackup="true"
                     android:backupAgent="cordova.plugin.cloudsettings.BackupAgentHelper" tools:node="merge" />
